...
import com.google.firebase.firestore.FirebaseFirestore

@OptIn(ExperimentalMaterialApi::class)
@Composable
fun SettingUi(navController: NavHostController, preferences: SharedPreferences, Context: Context = LocalContext.current) {

    val typelist = listOf("Student", "Normal")
    var expanded by remember { mutableStateOf(false) }
    var type by remember { mutableStateOf(preferences.getString(GlobalVarHolder.TYPE, "") ?: "") }
    var degreeprogram by remember { mutableStateOf(preferences.getString(GlobalVarHolder.PROGRAMME, "") ?: "") }
    var group by remember { mutableStateOf(preferences.getString(GlobalVarHolder.GROUP, "") ?: "") }
    var preferredRootpoint by remember { mutableStateOf(preferences.getString(GlobalVarHolder.ROOTPOINT, "") ?: "") }
    var preferredLine by remember { mutableStateOf(preferences.getString(GlobalVarHolder.PREFERREDLINE, "") ?: "") }
...

            // Row 2
            Row(
                verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                    text = "Type",
                    textAlign = TextAlign.Center,
                    color = MaterialTheme.colors.surface,
                    fontSize = 18.sp
                )
                Spacer(modifier = Modifier.weight(1f))
                ExposedDropdownMenuBox(
...

            // Row 3
            Row(
                verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                    text = "Degree Program",
                    textAlign = TextAlign.Center,
                    color = MaterialTheme.colors.surface,
                    fontSize = 18.sp
                )
                Spacer(modifier = Modifier.weight(1f))
                TextField(
...

            // Row 4
            Row(
                verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                    text = "Group",
                    textAlign = TextAlign.Center,
                    color = MaterialTheme.colors.surface,
                    fontSize = 18.sp
                )
                Spacer(modifier = Modifier.weight(1f))
                TextField(
...
                        .height(height = 60.dp)
                        .width(150.dp),
                    colors = TextFieldDefaults.textFieldColors(
                        backgroundColor = MaterialTheme.colors.primary,
                        textColor = MaterialTheme.colors.surface
                    ),
                    label = { Text(text = "Rootpoint", color = MaterialTheme.colors.secondary) },
                    textStyle = TextStyle(
                        fontFamily = FontFamily.SansSerif,
                        fontSize = 18.sp,
                        color = MaterialTheme.colors.surface
                    ),
                    keyboardOptions = KeyboardOptions(
...
                        .height(height = 60.dp)
                        .width(150.dp),
                    colors = TextFieldDefaults.textFieldColors(
                        backgroundColor = MaterialTheme.colors.primary,
                        textColor = MaterialTheme.colors.surface
                    ),
                    label = { Text(text = "Line", color = MaterialTheme.colors.secondary) },
                    textStyle = TextStyle(
                        fontFamily = FontFamily.SansSerif,
                        fontSize = 18.sp,
                        color = MaterialTheme.colors.surface
                    ),
                    keyboardOptions = KeyboardOptions(
...
                        .height(height = 60.dp)
                        .width(150.dp),
                    colors = TextFieldDefaults.textFieldColors(
                        backgroundColor = MaterialTheme.colors.primary,
                        textColor = MaterialTheme.colors.surface
                    ),
                    label = { Text(text = "Minutes", color = MaterialTheme.colors.secondary) },
                    textStyle = TextStyle(
                        fontFamily = FontFamily.SansSerif,
                        fontSize = 18.sp,
                        color = MaterialTheme.colors.surface
                    ),
                    keyboardOptions = KeyboardOptions(
...
