<resources>
    <string name="app_name">RootNavigator</string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="done">Done</string>
    <string name="undone">Undone</string>

    <!-- Button Labels -->
    <string name="button_save">Save</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_out">Log out</string>
    <string name="button_back">Back to Login</string>
    <string name="button_student">Student</string>
    <string name="button_standard">Standard</string>
    <string name="button_continue">Continue</string>
    <string name="button_submit">Submit</string>
    <string name="button_new_reminder">Create new Reminder</string>

    <!-- Activity Titles -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login">RootNavigator</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_exp">SessionExpiredActivity</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_reminder_overview">ReminderOverviewActivity</string>
    <string name="title_activity_new_reminder">NewReminderActivity</string>
</resources>