...
            verticalAlignment = Alignment.CenterVertically
        ) {
            when(infoList[0]) {
                "suburban" -> Icon(
                    imageVector = Icons.Filled.Train,
                    tint = if (infoList[2].toBoolean()) { MaterialTheme.colors.secondary } else { MaterialTheme.colors.surface },
                    contentDescription = "route type",
                    modifier = Modifier
                        .weight(2f)
                )
                "bus" -> Icon(
                    imageVector = Icons.Filled.DirectionsBus,
                    tint = if (infoList[2].toBoolean()) { MaterialTheme.colors.secondary } else { MaterialTheme.colors.surface },
...
                        fontSize = 16.sp,
                        fontWeight = FontWeight.Bold,
                        modifier = Modifier
                            .weight(1.5f)
                    )
                    Text(
                        text = "Dep.",
                        color = MaterialTheme.colors.primaryVariant,
                        fontSize = 16.sp,
                        fontWeight = FontWeight.Bold,
                        modifier = Modifier
                            .weight(1.25f)
                    )
...
